--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,6 @@ body {
   font-family: "JetBrains Mono", monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  display: block;
 }
