--- a/src/components/PopupIngridients/PopupIngridiends.module.css
+++ b/src/components/PopupIngridients/PopupIngridiends.module.css
@@ -2,14 +2,15 @@
 
 .overlay {
   /* display: flex; */
-  position: absolute;
+  position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-color: #0006;
   justify-content: center;
   align-items: center;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .procuctCardContainier {
@@ -20,6 +21,7 @@
   padding: 40px;
   width: 720px;
   height: 539px;
+  box-shadow: 0px 16px 24px rgba(76, 76, 255, 0.2);
 }
 
 .popupHeader {
@@ -27,6 +29,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .productInfo {
