--- a/src/components/PopupIngridients/PopupIngridiends.module.css
+++ b/src/components/PopupIngridients/PopupIngridiends.module.css
@@ -18,7 +18,7 @@
   background: #1c1c21;
   border: none;
   border-radius: 40px;
-  padding: 40px;
+  padding: 60px 40px 40px;
   width: 720px;
   height: 539px;
   box-shadow: 0px 16px 24px rgba(76, 76, 255, 0.2);
