--- a/src/components/BurgerIngredients/burgerIngredients.module.css
+++ b/src/components/BurgerIngredients/burgerIngredients.module.css
@@ -16,21 +16,12 @@
 .grisList {
   display: grid;
   flex-direction: row;
-  /* gap: 20px; */
   padding: 0;
   align-items: center;
   flex-wrap: nowrap;
   grid-template-columns: 24px 1fr;
+  column-gap: 20px;
 }
-
-/* .flexListContent {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  padding: 16px 32px 16px 24px;
-  align-items: center;
-  flex-wrap: nowrap;
-} */
 
 .grisListContent {
   display: grid;
