--- a/src/components/ModalOverlay/ModalOverlay.module.css
+++ b/src/components/ModalOverlay/ModalOverlay.module.css
@@ -1,11 +1,10 @@
 .overlay {
   /* display: flex; */
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: #0006;
-  justify-content: center;
-  align-items: center;
+  z-index: 0;
   top: 0;
   left: 0;
   overflow: hidden;
