--- a/src/components/OrderDetails/OrderDetails.module.css
+++ b/src/components/OrderDetails/OrderDetails.module.css
@@ -36,3 +36,17 @@
   align-self: center;
   margin: 80px 0;
 }
+
+.loader {
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #8a34db; 
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
