--- a/src/components/AppHeader/appHeader.module.css
+++ b/src/components/AppHeader/appHeader.module.css
@@ -1,10 +1,18 @@
 .headerFlex {
+  display: block;
+  
+  background: #1c1c21;
+}
+
+.headerContainier{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 16px 0;
   justify-items: end;
   align-items: center;
-  background: #1c1c21;
+  margin-left: auto;
+  margin-right: auto;
+  max-width:1400px
 }
 
 .nav {
