--- a/src/components/BurgerConstructor/burgerConstructor.module.css
+++ b/src/components/BurgerConstructor/burgerConstructor.module.css
@@ -29,6 +29,13 @@
   column-gap: 20px;
 }
 
+.flexContainier {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  min-height: 90px;
+}
+
 .gridListContent {
   display: grid;
   grid-template-columns: 2fr 5fr 2fr 1fr;
@@ -87,4 +94,11 @@
   justify-content: flex-end;
   gap: 40px;
   align-items: center;
+}
+
+.flexConstractorElement {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  display: flex,
 }
