--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -10,3 +10,10 @@
   justify-content: center;
   padding-bottom: 40px;
 }
+
+.ingridientDetailsContainier{
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
