--- a/src/components/IngredientDetails/IngredientDetails.module.css
+++ b/src/components/IngredientDetails/IngredientDetails.module.css
@@ -24,6 +24,30 @@
   box-shadow: 0px 16px 24px rgba(76, 76, 255, 0.2);
 }
 
+.currentProductCompound{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  color:#8585ad;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  gap: 20px;
+  margin-top: 32px;
+  text-align: center;
+}
+
+.currentProductCompound span {
+  font-family: 'Iceland';
+  font-size: 28px;
+  text-align: center;
+}
+.currentProductInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .popupHeader {
   display: flex;
   flex-direction: row;
