--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -16,7 +16,7 @@
   background: #1c1c21;
   border: none;
   border-radius: 40px;
-  padding: 40px;
+  padding: 50px 40px 40px;
   width: 720px;
   box-shadow: 0px 16px 24px rgba(76, 76, 255, 0.2);
   z-index: 1;
