--- a/src/components/auth_components/auth_forms.module.css
+++ b/src/components/auth_components/auth_forms.module.css
@@ -60,3 +60,14 @@
   color: #4C4CFF;
   text-decoration: none
 }
+
+.inputConteinier{
+  position: relative;
+}
+
+.inputIcon{
+  position: absolute;
+  top: 24px;
+  right: 26px;
+  cursor: pointer;
+}
