Update user info request fixed

--- a/src/components/BurgerIngredients/burgerIngredients.module.css
+++ b/src/components/BurgerIngredients/burgerIngredients.module.css
@@ -69,8 +69,11 @@
   font-weight: 400;
   font-size: 28px;
   line-height: 24px;
+  color:#F2F2F3;
+
 }
 
 .name {
   text-align: center;
+  color: #F2F2F3;
 }
