--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -25,7 +25,10 @@
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
-  margin-top: 30px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
