--- a/src/components/OrderFeedIngredients/OderFeedIngredients.module.css
+++ b/src/components/OrderFeedIngredients/OderFeedIngredients.module.css
@@ -11,7 +11,7 @@
   margin-right: 9px;
  }
 
-.containerDiv{
+.container{
     display: flex;
     align-items: center;
 }
@@ -25,7 +25,7 @@
   background-color: rgba(19, 19, 22, 1);
 }
 
-.divPrice {
+.containierPrice {
   display: flex;
   align-items: center;
   gap: 9px;
