--- a/src/components/OrdersTotal/OrdersTotal.module.css
+++ b/src/components/OrdersTotal/OrdersTotal.module.css
@@ -1,11 +1,7 @@
 .section {
-  padding: 24px;
   margin: 0 8px 16px 0;
   width: 100%;
-  /* background: #1c1c21;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 0px 2px rgba(0, 0, 0, 0.06),
-    0px 0px 1px rgba(0, 0, 0, 0.04);
-  border-radius: 40px; */
+  padding: 24px;
 }
 
 .boardContainer {
@@ -20,17 +16,7 @@
   margin-bottom: 24px;
 }
 
-.doneColor {
-  color: rgba(0, 204, 204, 1);
-}
 
-.pendingColor {
-  color: rgba(242, 242, 243, 1);
-}
-
-.cancelledColor {
-  color: rgb(255, 0, 0);
-}
 
 .containerOrderImg {
   display: flex;
@@ -73,15 +59,15 @@
 }
 
 .overlay {
+ 
+  align-items: center;
+  justify-content: center;
+  position: absolute;
   background: rgba(28, 28, 33, 0.6);
   color: aliceblue;
   width: 64px;
   height: 64px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
   right: 2px;
   top: 2px;
   z-index: 1;
@@ -99,3 +85,14 @@
   color: rgba(242, 242, 243, 1);
 }
 
+.done {
+  color: rgba(0, 204, 204, 1);
+}
+
+.pending{
+  color: rgba(242, 242, 243, 1);
+}
+
+.cancelled {
+  color: rgb(255, 0, 0);
+}
